	* Add support for in-band bytestreams for file transfers (XEP-0047).
	* Add support for sending and receiving attentions (equivalent to "buzz" 
	  and "nudge") using the command /buzz (XEP-0224).
	* A buddy's local time is displayed in the Get Info dialog if the remote
	  client supports it.

	IRC:
	* Correctly handle WHOIS for users who are joined to a large number of
	  channels.

	Pidgin:
	* Added -f command line option to tell Pidgin to ignore NetworkManager
	  and assume it has a valid network connection.
	* Allow plugins to specify custom link types to the GtkIMHtml widget.
	* The status message input box at the bottom of the buddy list expands
	  correctly when starting a new line of text.
	* Pressing the Enter key in the message entry box of the New Status
	  dialog and various other dialogs now causes the cursor to move to
	  the next line.
	* Created a unified Buddy Pounce notification window for all pounces
	  where "Pop up a notification" is selected, which avoids having a
	  new dialog box every time a pounce is triggered. (Jorge Villaseñor) 
	* The New Account dialog is now broken into three tabs.  Proxy
	  configuration has been moved from the Advanced tab to the new tab.

	Finch:
	* The hardware cursor is updated correctly. This will be useful
	  especially for users of braille terminals, screen readers etc.
	* Added a TinyURL plugin, which aids copying longer URLs.

version 2.5.5 (03/01/2009):
	libpurple:
	* Fix a crash when removing an account with an unknown protocol id.
	* Beta support for SSL connections for AIM and ICQ accounts.  To
	  enable, check the "Use SSL" option from the Advanced tab when
	  editing your AIM or ICQ account. (Paul Aurich)
	* Fix a memory leak in SILC. (Luke Petre)
	* Fix some string handling in the SIMPLE prpl, which fixes some buddy name
	  handling and other issues. (Paul Aurich, Marcus Sundberg)
	* Implement support for resolving DNS via the SOCKS4 proxy (SOCKS4a).

	ICQ: